tests/error/nonexistant_func_after_bar.ca

def main()
  1 | NonexistantFunc

vm = make_vm(main)
vm.run

assert(vm.has_error)
